docs/language/grammar.ebnf
program       = { item } , EOF ;
item          = module_decl | use_decl | export_decl | class_decl | trait_decl
              | function_decl | variable_decl | statement ;
module_decl   = "module" , path , ";" ;
use_decl      = "use" , path , [ "as" , identifier ] , ";" ;
export_decl   = "export" , ( function_decl | class_decl | trait_decl | variable_decl ) ;
path          = identifier , { "." , identifier } ;

variable_decl = ( "let" , [ "mut" ] | "const" ) , identifier , [ ":" , type ]
              , ":=" , expression , ";" ;
function_decl = [ visibility ] , [ "static" ] , "fn" , identifier , "("
              , [ parameter , { "," , parameter } ] , ")" , [ "->" , type ] , block ;
parameter     = identifier , ":" , type ;
type          = path ;

class_decl    = "class" , identifier , [ ":" , type , { "," , type } ] , "{" , { class_member } , "}" ;
class_member  = field_decl | function_decl | constructor_decl ;
field_decl    = [ visibility ] , [ "static" ] , ( "let" , [ "mut" ] | "const" )
              , identifier , ":" , type , ":=" , expression , ";" ;
constructor_decl = [ visibility ] , "fn" , "this" , "(" , [ parameter , { "," , parameter } ] , ")" , block ;
trait_decl    = [ visibility ] , "trait" , identifier , "{" , { function_signature } , "}" ;
function_signature = "fn" , identifier , "(" , [ parameter , { "," , parameter } ] , ")"
              , [ "->" , type ] , ";" ;
visibility    = "pub" | "priv" | "protected" ;

statement     = block | variable_decl | if_stmt | while_stmt | each_stmt | return_stmt
              | break_stmt | continue_stmt | expression , ";" ;
block         = "{" , { statement } , "}" ;
if_stmt       = "if" , expression , block , [ "else" , ( block | if_stmt ) ] ;
while_stmt    = "while" , expression , block ;
each_stmt     = "each" , identifier , "in" , expression , block ;
return_stmt   = "return" , [ expression ] , ";" ;
break_stmt    = "break" , ";" ;
continue_stmt = "continue" , ";" ;

expression    = assignment ;
assignment    = logic_or , [ "=" , assignment ] ;
logic_or      = logic_and , { "or" , logic_and } ;
logic_and     = equality , { "and" , equality } ;
equality      = comparison , { ( "==" | "!=" ) , comparison } ;
comparison    = sum , { ( "<" | "<=" | ">" | ">=" ) , sum } ;
sum           = product , { ( "+" | "-" ) , product } ;
product       = power , { ( "*" | "/" | "%" ) , power } ;
power         = unary , [ "**" , power ] ;
unary         = ( "-" | "+" | "not" | "!" ) , unary | cast ;
cast          = postfix , { "as" , type } ;
postfix       = primary , { "(" , [ expression , { "," , expression } ] , ")"
              | "." , identifier | "[" , expression , "]" } ;
primary       = number | string | char | "true" | "false" | "this" | identifier
              | "(" , expression , ")" ;
